<resources>
    <string name="app_name">NoguiApp2.0</string>


    <!-- Title and description-->
    <string name="title_intro_1">DESCUBRA LO QUE SUCEDE EN SUS CULTIVOS</string>
    <string name="title_intro_2">REGISTRA INFORMACION SOBRE TUS ACTIVIDADES</string>
    <string name="title_intro_3">OBTENGA SOLUCIONES AL INSTANTE</string>
    <string name="text_term">Al comenzar aceptas los términos y condiciones </string>
    <string name="frase_register">Aprende sobre tus cultivos y mantenlos sanos</string>
    <string name="text_et_nombre">Nombre</string>
    <string name="text_et_email">Correo</string>
    <string name="text_et_pass">Contraseña</string>
    <string name="cult_profile">Cultivos</string>
    <string name="pend_profile">Pendientes</string>
    <string name="descr_profile">Descripción</string>
    <string name="rol_profile">Rol</string>
    <string name="frase_login">Aprende Mientras cultivas</string>
    <string name="titulo_agg_nota">Titulo</string>
    <string name="desc_agg_nota">Descripción</string>
    <string name="fecha_agg_nota">Fecha</string>
    <string name="titulo_mis_culti">Mis Cultivos</string>
    <string name="text_signup">Registrate</string>
    <string name="aun_no_tienes_cuenta">Aun no tienes cuenta?</string>
    <string name="etiqueta_enfermedades">ENFERMEDADES</string>
    <string name="etiqueta_plagas">PLAGAS</string>
    <string name="etiqueta_prod">PRODUCTOS</string>


    <!--Bottons-->
    <string name="next">Siguiente</string>
    <string name="back">Anterior</string>
    <string name="done">Iniciar</string>
    <string name="title_activity_lateral_menu">LateralMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
