<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarlocal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/cards_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/titleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:focusedByDefault="true"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:hint="@string/titulo_agg_nota"
        android:inputType="textCapSentences"
        android:padding="5dp"
        android:textColor="@color/intro_title_color"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/textET"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:fontFamily="@font/sego_ui_regular"
        android:gravity="start"
        android:hint="@string/desc_agg_nota"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvFechaNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:hint="@string/fecha_agg_nota"
        android:padding="5dp"
        android:textColor="@color/intro_title_color" />

    <TextView
        android:id="@+id/IDcolor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="#0000"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregarN"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/ic_add_circle"
        android:src="@android:drawable/ic_menu_add">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</LinearLayout>
